infra/echo_ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: echo-ingress-alb
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/load-balancer-name: echo-ingress-alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}'
  rules:
   - http:
      paths:
      - backend:
          serviceName: echo1
          servicePort: 80
        path: /echo1
      - backend:
          serviceName: echo2
          servicePort: 80
        path: /echo2
